--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,111 +1,108 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap');
+
+:root{
+    --primary-color: #a855f7;
+    --primary-color-dark: #9333ea;
+    --secodary-color: #ca8a04;
+    --text-dark: #1f2937;
+    --text-light: #6b7280;
+    --extra-light: #faf5ff;
+    --max-width: 1200px;
+}
+
+*{
     padding: 0;
     margin: 0;
-    }
-    
-    /* Dev */
-    header,
-    header * {
-    outline: 1px rgba(0, 0, 0, 0.952) dahed;
-    }
-    
-    /* Dep */
-    header {
-    display: flex;
-    justify-content: space-between;
-    padding: .8rem 5vw ;
-    align-items: center;
+    box-sizing: border-box;
+}
+
+a{
+    text-decoration: none;
+}
+
+body{
+
+    font-family: "Radio Canada Big", sans-serif;
+}
+
+nav{
+    width: 100%;
     position: fixed;
-    width: 90vw;
     top: 0;
     left: 0;
-    background-color: rgba(23, 5, 177, 0.616);
-    
-    }
-    
-    section.hero,
-    section.hero * {
-    outline: 1px red dahed
-    }
-    
-    
-    header button {
-    padding: .5rem 1rem;
-    border: none;
-    background: transparent;
-    font-weight: 600;
-    cursor: pointer;
-    transition: .3s ease-in-out;
-    height: 6vh;
-    border-bottom: 2px transparent;
-    
-    &:hover {
-    background-color: rgba(152, 231, 231, 0.662);
-    border-bottom: 2px rgb(0, 0, 0) solid;
-    }
-    
-    &:active {
-    transition: .1s ease-in-out;
-    color: white;
-    background-color: rgba(9, 58, 58, 0.662);
-    border-bottom: 2px rgb(0, 42, 255) solid;
-    }
-    }
-    
-    section.hero {
+    background-color: #ffffff;
+    z-index: 99;
+}
+
+.nav__content{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1.5rem 1rem;
     display: flex;
-    margin: .3rem 5vw 0;
-    height: 94vh;
-    padding-top: 5vh;
-    
-    & .right{
-    width: 70vh;
-    }
-    
-    & .left{
-    width: 130vh
-    }
-    
-    }
-    
-    section.hero .left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 16px;
-    padding-top: 5vh;
-    & h3{
-    font-size: 2rem;
-    }
-    
-    & h1{
-    font-size: 5rem;
-    }
-    
-    & h2{
-    font-size: 3.5rem;
-    }
-    
-    & p{
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav .logo a{
     font-size: 1.5rem;
-    }
-    
-    & span{
-    color: rgb(64, 73, 196);
-    }
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .3s;
+}
+
+nav .logo a:hover {
+    color: var(--primary-color-dark);
+}
+
+nav .checkbox{
+    display: none;
+}
+
+nav input{
+    display: none;
+}
+nav .checkbox i{
+    font-size: 2rem;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+
+ul{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    list-style: none;
+    transition: left 0.3s;
+}
+
+ul li a{
+    padding: 0.5rem 1rem;
+    border: 2px solid transparent;
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--text-dark);
+    transition: 0.3s;
+}
+
+ul li a:hover{
+    border-top-color: var(--secodary-color);
+    border-bottom-color: var(--secodary-color);
+    color: var(--secodary-color);
+}
+
+@media (width < 750px){
+    nav .checkbox{
+        display: block;
     }
 
-    #education{
-        
+    ul{
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 85px);
+        left: -100%;
+        top: 85px;
+        background-color: var(--extra-light);
+        flex-direction: column;
     }
-
-
-    }
-    
-    section.hero .right img {
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-    object-position: top;
-    }
+}
