--- a/pages/About me/assets/css/style.css
+++ b/pages/About me/assets/css/style.css
@@ -104,6 +104,73 @@ ul li a:hover {
   gap: 4rem;
 }
 
+.school2 {
+    background-color: var(--text-light);
+}
+
+.school2__container {
+    min-height: 100vh;
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+}
+
+.title2 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 3rem;
+    color: var(--primary-color-dark);
+    margin-bottom: 1rem;
+}
+
+.school3 {
+    background-color: var(--text-dark);
+}
+
+.school3__container {
+    min-height: 100vh;
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+}
+
+.title3 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 3rem;
+    color: var(--primary-color-dark);
+    margin-bottom: 1rem;
+}
+
+.school4 {
+    background-color: var(--extra-light);
+  }
+  
+  .school4__container {
+    min-height: 100vh;
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+}
+
+
+.title4 {
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 3rem;
+    color: var(--text-dark);
+    margin-bottom: 1rem;
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -180,6 +247,24 @@ ul li a:hover {
     }
   
     .section__container {
+      padding: 10rem 1rem 5rem 1rem;
+      text-align: center;
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .school2__container {
+      padding: 10rem 1rem 5rem 1rem;
+      text-align: center;
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .school3__container {
+      padding: 10rem 1rem 5rem 1rem;
+      text-align: center;
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .school4__container {
       padding: 10rem 1rem 5rem 1rem;
       text-align: center;
       grid-template-columns: repeat(1, 1fr);
