--- a/pages/Certification/assets/css/style.css
+++ b/pages/Certification/assets/css/style.css
@@ -89,3 +89,138 @@ ul li a:hover {
   border-bottom-color: var(--secondary-color);
   color: var(--secondary-color);
 }
+
+.experience-container{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.experience-box{
+    padding: 24px;
+    text-align: center;
+    background-color: #D4C9C7;
+}
+
+.section {
+    background-color: var(--secondary-color);
+}
+
+.section__container {
+    min-height: 100vh;
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+}
+.title {
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 3rem;
+    color: var(--text-dark);
+    margin-bottom: 1rem;
+  }
+
+.title span {
+    font-weight: 600;
+}
+.action__btns {
+    display: flex;
+    gap: 1rem;
+}
+
+.action__btns button {
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    padding: 1rem 2rem;
+    outline: none;
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+
+.heading{
+    max-width: 50em;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 2em;
+  }
+
+
+.see__cert {
+    background-color: var(--primary-color);
+    color: var(--text-light);
+}
+
+.see__cert:hover {
+    background-color: var(--primary-color-dark);
+}
+.see__cert2{
+    background-color: var(--primary-color);
+    color: var(--text-light);
+}
+
+.see__cert2:hover {
+    background-color: var(--primary-color-dark);
+}
+.project-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
+    background-color: #D4C9C7;
+}
+.project{
+    padding: 12px;
+    border: 1px solid var(--primary-color-dark);
+    text-align: center;
+    display: grid;
+    justify-items: center;
+}
+
+.project img {
+    width: min(25rem, 90%);
+    margin-bottom: 1rem;
+}
+
+@media (width < 750px) {
+    nav .checkbox {
+      display: block;
+    }
+  
+    ul {
+      position: absolute;
+      width: 100%;
+      height: calc(100vh - 85px);
+      left: -100%;
+      top: 85px;
+      background-color: var(--extra-light);
+      flex-direction: column;
+      justify-content: center;
+      gap: 3rem;
+    }
+  
+    nav #check:checked ~ ul {
+      left: 0;
+    }
+  
+    ul li a {
+      font-size: 1.25rem;
+    }
+  
+    .section__container {
+      padding: 10rem 1rem 5rem 1rem;
+      text-align: center;
+      grid-template-columns: repeat(1, 1fr);
+    }
+  
+    .project {
+      grid-area: 1/1/2/2;
+    }
+  
+    .action__btns {
+      margin: auto;
+    }
+  }
